src/objects/AcctSeed__Payment_Activity__c.object
<CustomObject>
    <description>Used to capture the details of a payment request.</description>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Receipt</label>
        <referenceTo>AcctSeed__Cash_Receipt__c</referenceTo>
        <relationshipLabel>Payment Activities</relationshipLabel>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Error_Message__c</fullName>
        <description>Determines status of charge request</description>
        <inlineHelpText>Determines status of charge request</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Error_Type__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Method_Type__c</fullName>
        <formula>IF(OR(ISPICKVAL(AcctSeed__Payment_Method__r.AcctSeed__Payment_Method_Type__c, &apos;Credit Card&apos;), ISPICKVAL(AcctSeed__Payment_Method__r.AcctSeed__Payment_Method_Type__c, &apos;&apos;)), &apos;Credit Card&apos;, &apos;ACH&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <referenceTo>AcctSeed__Payment_Method__c</referenceTo>
        <relationshipLabel>Payment Activities</relationshipLabel>
        <relationshipName>Payment_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                    <default>true</default>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Authorized </fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                    <default>true</default>
                    <label>Payment</label>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Activity</label>
    <listViews>
        <fullName>AcctSeed__ACH_Completed</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Payment_Method__c</columns>
        <columns>AcctSeed__Payment_Method_Type__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Payment_Method_Type__c</field>
            <operation>equals</operation>
            <value>ACH</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </filters>
        <label>ACH Completed</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__ACH_Declined</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Payment_Method__c</columns>
        <columns>AcctSeed__Payment_Method_Type__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Error_Type__c</columns>
        <columns>AcctSeed__Error_Message__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Payment_Method_Type__c</field>
            <operation>equals</operation>
            <value>ACH</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Declined,Error</value>
        </filters>
        <label>ACH Declined</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__ACH_Pending</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Payment_Method__c</columns>
        <columns>AcctSeed__Payment_Method_Type__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Payment_Method_Type__c</field>
            <operation>equals</operation>
            <value>ACH</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>ACH Pending</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Payment_Method__c</columns>
        <columns>AcctSeed__Payment_Method_Type__c</columns>
        <columns>AcctSeed__Cash_Receipt__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_ACH</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Payment_Method__c</columns>
        <columns>AcctSeed__Payment_Method_Type__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Payment_Method_Type__c</field>
            <operation>equals</operation>
            <value>ACH</value>
        </filters>
        <label>All ACH</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Credit_Card</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Payment_Method__c</columns>
        <columns>AcctSeed__Payment_Method_Type__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Payment_Method_Type__c</field>
            <operation>equals</operation>
            <value>Credit Card</value>
        </filters>
        <label>All Credit Card</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Credit_Card_Decline</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Payment_Method__c</columns>
        <columns>AcctSeed__Payment_Method_Type__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Payment_Method_Type__c</field>
            <operation>equals</operation>
            <value>Credit Card</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </filters>
        <label>Credit Card Decline</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Payment Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>